[tool.poetry]
name = "freewili"
version = "0.0.0"
description = ""
authors = ["David Rebbe <drebbe@intrepidcs.com>"]
readme = "README.md"
license = "MIT"
homepage = "https://freewili.com/"
repository = "https://github.com/freewili/freewili-python"
keywords = ["freewili"]

[tool.poetry.dependencies]
python = "^3.11"
pyserial = "^3.5"
result = "^0.17.0"


[tool.poetry.group.dev.dependencies]
mypy = "^1.10.1"
ruff = "^0.5.3"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry.scripts]
fwi-serial = 'freewili.cli:main'

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
disallow_untyped_calls = true

[tool.poetry-dynamic-versioning]
enable = true

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "I",  # isort
    "N",  # PEP8 naming convetions
    "D"  # pydocstyle
]
ignore = [
    "C901", # too complex
    "D401", # imperative mood
    "D105", # missing docstring in magic method
    "D107", # missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"